# offshore-dl

./: .dockerignore  .gitignore  IMPLEMENTATION_PLAN.md  LICENSE  README.md  dvc.yaml  pyproject.toml  test_volve_models.py
configs/: README.md  base.yaml
docker/: .env.template  Dockerfile  README.md  docker-compose.yml
docs/: 3w_stage2_window_audit_2026-05.md  benchmark-validity-fix-summary.md  dissertation_readiness_runbook_2026-05.md  gpu-waiting-rerun-checklist.md  next_plans.md
error_log_runtime/: notes_issues_manual_fix_exec_sequences.md
logs/: inner_mongolia_multiwell_nohup.out  spe_berg_hpo_nohup.out
reports/: README.md  all_results.tex  audit_fix_report.md  baseline_results_report.md  cdf_post_fix_summary_2026-05.json  dissertation_claim_ledger_2026-05.md  dissertation_evidence_bundle_manifest_2026-05.md  dissertation_external_archive_manifest_2026-05.md  dissertation_final_tables_2026-05.md  dissertation_narrative_checklist_2026-05.md  dissertation_prose_audit_2026-05.md  dissertation_result_manifest_2026-05.md  dissertation_results_2026-05.tex  dissertation_results_narrative_2026-05.md  dissertation_sparse_exclusions_2026-05.csv  experimental_findings_3w_improvements.md  forecasting_borda.json  ganymede_improvement_results.md  ieee_paper.tex  literature_review_3w.md  post_merge_audit_log.md  statistical_tests_nested.json  xgboost_results.tex
results/: README.md  forecasting_summary_wide_mae.csv  summary_production_3w_features.json  summary_production_cdf.json  tirex_3w_nested.json
scripts/: README.md  _apply_convtimenet_hpo_and_rerun.py  _apply_fkmad_hpo_and_rerun.py  _apply_mambasl_hpo_and_rerun.py  _run_convtimenet_raw_only.py  _run_tcn_multiwell_only.py  aggregate_forecasting_results.py  build_forecasting_mase_manifest.py  deploy_and_rerun.sh  deploy_lps.sh  docker_run.sh  ensemble_3w.py  extract_tirex_embeddings.py  hpc_job.slurm  hpc_job_3w.slurm  hpo_3w_models.txt  nacad_job.slurm  nacad_job_3w.slurm  populate_spe_berg_tables.py  push_to_registry.sh  run_all_production.sh  run_ganymede_chronos_finetune.py  run_ganymede_ensemble.py  run_ganymede_lightgbm.py  run_mlflow_tracked.sh  run_optuna_hpo.py  run_production_3w.py  run_production_3w_features.py  run_production_cdf.py  run_production_ganymede.py  run_production_inner_mongolia.py  run_production_spe_berg.py  run_production_volve.py  run_spe_berg_hpo_all.sh  slurm_3w.sh  (+36 more)
(+560 files in other folders)
